--- a/DOA_ScoreRegister/DOA_ScoreRegister/DOA_ScoreRegister.vcxproj.filters
+++ b/DOA_ScoreRegister/DOA_ScoreRegister/DOA_ScoreRegister.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="Trie.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SearchableScoreRegister.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ScoreRegister.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
