--- a/DOA_ScoreRegister/ScoreRegister_UnitTests/ScoreRegister_UnitTests.vcxproj
+++ b/DOA_ScoreRegister/ScoreRegister_UnitTests/ScoreRegister_UnitTests.vcxproj
@@ -36,6 +36,9 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="UUT_HashMap.cpp" />
+    <ClCompile Include="UUT_LinkedList.cpp" />
+    <ClCompile Include="UUT_LinkedListNode.cpp" />
     <ClCompile Include="UUT_ScoreRegister.cpp" />
     <ClCompile Include="UUT_SearchableScoreRegister.cpp" />
     <ClCompile Include="UUT_SearchBar.cpp" />
@@ -45,6 +48,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UUT_Trie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOA_ScoreRegister\DOA_ScoreRegister.vcxproj">
